--- a/exercise01.html
+++ b/exercise01.html
@@ -58,7 +58,7 @@
         </div>
                 <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Name Surname</a></li>
+            <li><a href="index.html">ALEX</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Exercises <span class="caret"></span></a>
               <ul id="exercises" class="dropdown-menu" role="menu">
@@ -74,16 +74,18 @@
 	<!-- Insert your content here below! -->
 
 
-        <h2><div style="color: blue">I've learned today:</div></h2>
-        <ul>
-        <li>How to write HTML code</li>
-        <li>For example: to make list with this ---> ▪</li>
-        <li>To make my letter <strong>bold</strong></li>
-        <li>to put an image</li>
+        <h2><div style="color: blue">Things I've learned:</div></h2>
+        <ul><li>How to write HTML code</li>
+        <li>How to make my letters <strong>BOLD</strong></li>
+        <li>How to change the <h4><strong>SIZE</strong></h4> of my words</li> 
+        <li>How to let my letters wear <div style="color: orange">makeups</div>   </li>
+        <li>To make list with this ---> ▪</li>
+        <li>To put an image</li>
         </ul>
-        <img src="media/about/PIC.png" width="250">
+        <img src="media/about/PIC.png" width="250"heigh='210' >
       <h10><---LIKE THIS</h10>
-        <ul><li>To add a software:like Google Chrome (web browser) and bracket (text editor).</li>
+        <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor) and Git Bash.</li>
+        <li>To make my website online so everybody (include you) can see it (that is the reason you can see these words).</li>
         <li>That's all.(^_^)</li>
         </ul>
     <!-- End of your content -->
