--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<!-- Insert your content here below! -->
            
 <h1>About Me</h1>
-<p>Hi, I'm a Alex.  hi!I'm from Shanghai,China.</p>
+<p>Hi, I'm an Alex! I'm from Shanghai,China.Yay!</p>
 
         <p class="pic">
         <img src="media/about/ALEX.jpg" width="350"><img src="media/about/PIC.png" width="350">	
