--- a/exercise01.html
+++ b/exercise01.html
@@ -82,12 +82,14 @@
         <li>To make list with this ---> ▪</li>
         <li>To put an image</li>
         </ul>
-        <img src="media/about/PIC.png" width="250"heigh='210' >
+        <img src="media/about/PIC.png" width="250"height='210' >
       <h10><---LIKE THIS</h10>
         <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor) and Git Bash.</li>
         <li>To make my website online so everybody (include you) can see it (that is the reason you can see these words).</li>
         <li>That's all.(^_^)</li>
         </ul>
+        <h4><div style="color: red">U can click on the 'ALEX' button in the upper left corner of the page to view more about me.</div></h4>
+          <h10>Yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h10>
     <!-- End of your content -->
 
     </div> <!-- /container -->
