--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <p>I like to play <strong>Minecraft</strong>.</p> 
     <img src="media/about/mine.jpg" width="250">
  <h4>Yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h4>     
-          <p><a class="btn btn-primary" href="https://fablabo.com/" role="button">View more &raquo;</a></p>
+          <p><a class="btn btn-primary" href="https://fablabo.com/" role="button">View more about my LAB &raquo;</a></p>
 	  
 
       
