--- a/exercise01.html
+++ b/exercise01.html
@@ -79,7 +79,7 @@
         <li>How to make my letters <strong>BOLD</strong></li>
         <li>How to change the <h4><strong>SIZE</strong></h4> of my words</li> 
         <li>How to let my letters wear <div style="color: orange">makeups</div>   </li>
-        <li>To make list with this ---> ▪</li>
+        <li>To make lists with this ---> ▪</li>
         <li>To put an image</li>
         </ul>
         <img src="media/about/PIC.png" width="250"height='210' >
