--- a/exercise01.html
+++ b/exercise01.html
@@ -75,17 +75,17 @@
 
 
         <h2><div style="color: blue">Things I've learned:</div></h2>
-        <ul><li>How to write HTML code</li>
-        <li>How to make my letters <strong>BOLD</strong></li>
-        <li>How to change the <h4><strong>SIZE</strong></h4> of my words</li> 
-        <li>How to let my letters wear <div style="color: orange">makeups</div>   </li>
-        <li>To make lists with this ---> ▪</li>
-        <li>To put an image</li>
+        <ul><li>How to write HTML code. </li>
+        <li>How to make my letters <strong>BOLD</strong>.</li>
+        <li>How to change the <h4><strong>SIZE</strong></h4> of my words.</li> 
+        <li>How to let my letters wear <div style="color:orange">makeups</div></li>
+        <li>To make lists with this ---> ▪ </li>
+        <li>To put an image.</li>
         </ul>
         <img src="media/about/PIC.png" width="250"height='210' >
       <h10><---LIKE THIS</h10>
         <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor) and Git Bash.</li>
-        <li>To make my website online so everybody (include you) can see it (that is the reason you can see these words).</li>
+        <li>To make my website online so that everybody (include you) can see it (that is the reason you can see these words).</li>
         <li>That's all.(^_^)</li>
         </ul>
         <h4><div style="color: red">U can click on the 'ALEX' button in the upper left corner of the page to view more about me.</div></h4>
