--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 	<!-- Insert your content here below! -->
            
-<h1>About Me</h1>
+<h1><div style="color: blue">About Me</div></h1>
 <p>Hi, I'm an Alex! I'm from Shanghai,China.Yay!</p>
 
         <p class="pic">
@@ -85,7 +85,7 @@
 		</p>
 
 
-<h3>Some of my favorite hobbies:</h3>
+<h3><div style="color: yellow">Some of my favorite hobbies:</div></h3>
 <ul>
 	<li>Reading</li>
 	<li>Playing Sports</li>
