--- a/exercise01.html
+++ b/exercise01.html
@@ -84,8 +84,10 @@
         </ul>
         <img src="media/about/PIC.png" width="250"height='210' >
       <h10><---LIKE THIS</h10>
-        <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor) and Git Bash.</li>
+        <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor),Git Bash and Arduino.</li>
         <li>To make my website online so that everybody (include you) can see it (that is the reason you can see these words).</li>
+        <li>To create a LED and make it 
+    <div style="color:yellow">light</div> when you press the button.</li>
         <li>That's all.(^_^)</li>
         </ul>
         <h4><div style="color: red">U can click on the 'ALEX' button in the upper left corner of the page to view more about me.</div></h4>
