--- a/exercise05.html
+++ b/exercise05.html
@@ -71,14 +71,14 @@
     </nav>
     <div class="container">
 
-	<!-- Insert your content here below! -->
+	<!-- Insert your content here below! -->   
 
 
-     <h2>Exercise...</h2>
+     <h2>Output Device</h2>
     
     <h3>Menu</h3>
 	<p>
-	You can edit it by changing the <em>exercises-menu.html</em> and <em>project-menu.html</em>. Do <strong>not</strong> add any &ltol&gt; or &ltul&gt;, leave the structure as it is.
+	I have learned 
 	</p>
     
     <h3>Text</h3>
