--- a/exercise04.html
+++ b/exercise04.html
@@ -80,7 +80,7 @@
 	<p>I lerned how to build a LED light. If you want to know more about building a light, keep on going.
 	</p>
 	<h4>PICTURE:</h4>
-	<img src="media/about/pi.png">
+	<img src="media/about/has.png">
     <p>Here is the code:
     <pre>int LED = 7 ;
 int Button = 4 ;
@@ -113,6 +113,7 @@ void setup (){
     <p>And there is another way to switch the light. Which is to use a little joystick. There are two different lines. I simply use the angles to switch the light. It's pretty cool
       <H4>PICTURE:</H4>
     <img src="media/about/PICAT.png">
+    <img src="media/about/time.jpg">
     <p>Here's the code:</p>
       <pre>int LED = 13;
 int LED1 = A1;
