--- a/exercise05.html
+++ b/exercise05.html
@@ -58,7 +58,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Name Surname</a></li>
+            <li><a href="index.html">ALEX</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Exercises <span class="caret"></span></a>
               <ul id="exercises" class="dropdown-menu" role="menu">
@@ -83,7 +83,8 @@
 	</p>
     
     <h3>PICTURES:</h3>
-        <img src="media/about/pppppppppppppppppp.png">
+        <img src="media/about/come.png">
+        <img src="media/about/my.jpg">
 	
 	Here's the code:
 	<pre class="prettyprint linenums">
