--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p>Hi, I'm an Alex! I'm from Shanghai,China.Yay!</p>
 
         <p class="pic">
-        <img src="media/about/ALEX.jpg" width="350"><img src="media/about/PIC.png" width="350">	
+        <img src="media/about/things.jpg" width="350"><img src="media/about/PIC.png" width="350">	
 
             <legend>Here are my pictures.</legend>
 		</p>
@@ -94,18 +94,21 @@
     
 </ul>
         <p>I like to read <strong>all kinds</strong> of books.</p>
-        <img src="media/about/book.jpg"
+        <img src="media/about/summer.jpg"
              width='250'
             >
     <p>I like to play <strong>baseball</strong>.</p>
-        <img src="media/about/ba.jpg" width='250'>
+        <img src="media/about/change.jpg" width='250'>
    <p>I like to watch <strong>'Rick and Morty'</strong> for example.</p>
-    <img src='media/about/ram.jpg'
+    <img src='media/about/winter.jpg'>
         width="250"
          height="250">
   <p>I like to play <strong>Minecraft</strong>.</p> 
-    <img src="media/about/mine.jpg" width="250">
- <h4>Yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h4>     
+    <img src="media/about/ends.jpg" width="250">
+ <h4>Yeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h4>
+        <p>Ps: There's a picture about my cozy little program place.</p>
+    <img src="media/about/comes.jpg" width="250"height="200">
+        <p>Ahhhh!（^o^）</p>
           <p><a class="btn btn-primary" href="https://fablabo.com/" role="button">View more about my LAB &raquo;</a></p>
 	  
 
