--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <p>I like to play <strong>baseball</strong>.</p>
         <img src="media/about/change.jpg" width='250'>
    <p>I like to watch <strong>'Rick and Morty'</strong> for example.</p>
-    <img src='media/about/winter.jpg'>
+    <img src='media/about/winter.jpg'
         width="250"
          height="250">
   <p>I like to play <strong>Minecraft</strong>.</p> 
