--- a/exercise01.html
+++ b/exercise01.html
@@ -81,8 +81,10 @@
         <li>How to let my letters wear <div style="color:orange">makeups</div></li>
         <li>To make lists with this ---> ▪ </li>
         <li>To put an image.</li>
+            <img src="media/about/PIC.png" width="250" height='210'>
+        <li>Create a Scratch game.</li>
+            <img src="media/about/g.jpg" width="600" height="220">
         </ul>
-        <img src="media/about/PIC.png" width="250"height='210' >
       <h10><---LIKE THIS</h10>
         <ul><li>To add a software:like Google Chrome (web browser), bracket (text editor),Git Bash and Arduino.</li>
         <li>To make my website online so that everybody (include you) can see it (that is the reason you can see these words).</li>
