--- a/exercise02.html
+++ b/exercise02.html
@@ -76,17 +76,23 @@
 
      <h2>2D STUFF</h2>
     
-    <h3>Menu</h3>
+    <h3>Menu:</h3>
 	<p>
-	I install some tools that helps me draw things. And from that I only know one thing: my computer sucks.Just kidding. Just keep reading as usual.
+	I install some tools that helps me draw things. And from that I only know one thing: my computer sucks.Just kidding. Keep reading as usual.If u don't, u suck.
 	</p>
-    
-    <h3>Picture</h3>
-	<img src="media/about/house.PNG" width="250">
+    <h3>Picture:</h3>
+	<img src="media/about/stuff.PNG" width="250">
 	<p>
-	I used this Inkscape thing and drew this. It is pretty good actually, but too complicate.
+	This is what it looks like when it's done.
 	</p>
-    <h2><div style="color:red">That's basically all I have learned.</div></h2>
+    <h3>Steps:</h3>
+    <img src="media/about/333.PNG" width="250">
+    <p>There is the tools.The figures that u need to finish the project r all here.</p>
+    <img src="media/about/444.PNG" width="250">
+    <p>Here shows the layers of all your figures.</p>
+    <img src="media/about/555.PNG" width="250">
+    <p>There is some other tools if u r not satisfied with the tools on the left.</p>
+    <h2><div style="color:red">If u have any other questions, don't ask me!</div></h2>
 	<p>
 	<a href="#">
 	<button type="button" class="btn btn-primary btn-lg">Wanna click me?</button>
